--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -362,7 +362,7 @@
         <div class="sidebar card" id="tab-container">
           <ul class="unstyled table fullwidth links">
             <li class="tab" id="li-tab-timeline"><a href="#tab-timeline">timeline</a></li>
-	    <li class="tab" id="li-tab-comentarios"><a href="#tab-comentarios">Comentarios</a></li>
+	          <li class="tab" id="li-tab-comentarios"><a href="#tab-comentarios">Comentarios</a></li>
             <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Amigos</a></li>
           </ul>
           <div class="unstyled content" id="hood-tabs">
@@ -422,27 +422,27 @@
       </a>
     </div>
   {% endif %}
-  {% for item in publications_top15 %}
-  <div class="wrapper" id="pub-{{item.from_publication__id}}" data-id="{{ user.pk }}">
+  {% for pub in publications_top15 %}
+  <div class="wrapper" id="pub-{{ pub.pk }}" data-id="{{ user.pk }}">
             <div class="box">
             <span id="check-{{item.from_publication__id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"> </i></span>
             <!-- Check para ampliar el mensaje... -->
                   <div class="ampliado" id="expand-{{item.from_publication__id}}">
                       <div class="nombre_image">
                     <ul>
-                      <li><i class="first">{{item.user__first_name}} {{item.user__last_name}}</i></li>
-                      <li><a class="name" href="/profile/{{ item.user__username }}" >{{item.user__username}}</a></li>
+                      <li><i class="first">{{pub.author__first_name}} {{pub.author__last_name}}</i></li>
+                      <li><a class="name" href="/profile/{{ item.author__username }}" >{{item.user__username}}</a></li>
                     </ul>
-                    {% if item.user__profile__image and item.user__profile__image|file_exists %}
-                     <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
+                    {% if pub.author__profile__image and pub.author__profile__image|file_exists %}
+                     <img src="{{MEDIA_URL}}{{ pub.author__profile__image }}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
                   {% else %}
                      <img src="{{STATIC_URL}}img/nuevo.png"  alt="img" class="usr-img img-responsive"> <!-- id es avatar-publication-->
                   {% endif %}
                       </div>
 
                     <div class="parrafo comment-tab">
-                    <a target="_blank">{{item.from_publication__created}}</a><br><br>
-                        {{ item.from_publication__content|replace_tags_mentions|safe }}
+                    <a target="_blank">{{ pub.created }}</a><br><br>
+                        {{ pub.content|replace_tags_mentions|safe }}
                   </div>
                   <div class="text_area">
                       <textarea placeholder="Escribe tu mensaje..."></textarea>
@@ -456,7 +456,7 @@
                   </div>
                   </div>
       <div class="image">
-        {% if item.user__profile__image and item.user__profile__image|file_exists %}
+        {% if pub.author__profile__image and pub.author__profile__image|file_exists %}
         <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
           {% else %}
             <img src="{{STATIC_URL}}img/nuevo.png"  alt="img" class="usr-img img-responsive"> <!-- id es avatar-publication-->
@@ -465,11 +465,11 @@
 </div>
 
                 <article class="articulo">
-                  <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{ item.user__username }}</a> ha publicado:  </h2>
-                    <p>Padre del comentario con ID: {{ item.from_publication__replies }}</p>
+                  <h2 class="h22"><a href="/profile/{{ pub.author__username }}" >{{ pub.author__username }}</a> ha publicado:  </h2>
+                    <!--<p>Padre del comentario con ID: {{ item.from_publication__replies }}</p>-->
                   <div class="parrafo comment">
-                    <a target="_blank">{{item.from_publication__created}}</a><br>
-                      <div class="wrp-comment">{{ item.from_publication__content|replace_tags_mentions|safe}}</div>
+                    <a target="_blank">{{pub.created}}</a><br>
+                      <div class="wrp-comment">{{ pub.content|replace_tags_mentions|safe}}</div>
                   </div>
                     <div class="show-more">
                         <a href="#">+ Mostrar más</a>
@@ -477,34 +477,35 @@
               <!-- OPCIONES DE COMENTARIOS -->
                 <div class="optiones_comentarios">
                     <ul class="opciones">
-                        {% if user.is_authenticated and user.username == item.user__username %} <!-- Si estamos visitando un perfil que no es el nuestro -->
+                        {% if user.is_authenticated and user.username == pub.author.username %} <!-- Si estamos visitando un perfil que no es el nuestro -->
                              <li title="Borrar comentario"><i class="fa fa-trash"></i></li>
                         {% elif user.username == user_profile.username %} <!-- Si estamos visitando nuestro propio perfil -->
                              <li title="Borrar comentario"><i class="fa fa-trash"></i></li>
                         {% endif %}
-                        {% if item.from_publication__hates > 0 %}
+                        {% if pub.hates > 0 %}
                         <li title="No me gusta" class="fa-broken-heart"><i id="fa-hate" class="fa fa-heartbeat"> {{ item.from_publication__hates }}</i></li>
                         {% else %}
                         <li title="No me gusta" class="fa-broken-heart"><i id="fa-hate" class="fa fa-heartbeat"></i></li>
                         {% endif %}
-                        {% if item.from_publication__likes > 0 %}
+                        {% if pub.likes > 0 %}
                             <li title="¡Me gusta!"><i id="like-heart" class="fa fa-heart"> {{ item.from_publication__likes }} </i></li>
                         {% else %}
                             <li title="¡Me gusta!"><i id="like-heart" class="fa fa-heart"></i></li>
                         {% endif %}
                        <li title="Citar"><i class="fa fa-quote-left">
                        </i></li>
-                       <li title="Responder"><i class="fa fa-reply"></i></li>
+                       <li title="Responder"><i class="fa fa-reply" id="reply-caja-comentario-{{ pub.pk }}"></i></li>
                        <li  title="Añadir a mi timeline"><i class="fa fa-tag"></i></li>
                     </ul>
                 </div>
-
                 </article>
-                <div id="actual-{{item.from_publication__id}}" class="replay-actual-message">
-                  <div class="triangle-reply"></div>
-                  <textarea name="reply-textarea" rows="4" cols="50"></textarea>
-                    <button class="enviar"><i class="fa fa-paper-plane-o"></i></button>
+                {% include "account/new_reply.html" %}
+                <!-- RESPUESTAS A COMENTARIOS -->
+                {% for reply in pub.replies %}
+                <div class="comment-reply">
+                  {{ reply }}
                 </div>
+                {% endfor %}
     </div>
     {% endfor %}
 
