--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -1,6 +1,6 @@
 {% load tags_mentions %}
 {% load avatar_tags %}
-
+{% load app_filters %}
   <div id="tab-comentarios">
 	  {% if privacity == 'A' or isFriend and privacity == 'OF' or user.username == user_profile.username or privacity == 'OFAF' and isFriend or isFollower and privacity == 'OFAF' %} {% comment %} Si eres amigo o estas visitando tu propio perfil... {% endcomment %}
   {% if publications_top15|length == 0 %} <!-- Si el usuario no tiene comentarios, proponemos uno -->
@@ -11,37 +11,29 @@
       </a>
     </div>
   {% endif %}
-  {% for item in publications_top15 %}
-  <div class="wrapper" id="pub-{{item.from_publication__id}}" data-id="{{ user.pk }}">
+  {% for pub in publications_top15 %}
+  <div class="wrapper" id="pub-{{ pub.pk }}" data-id="{{ user.pk }}">
             <div class="box">
-            <span id="check-{{item.from_publication__id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"> </i></span>
+            <span id="check-{{pub.id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"> </i></span>
             <!-- Check para ampliar el mensaje... -->
-                  <div class="ampliado" id="expand-{{item.from_publication__id}}">
+                  <div class="ampliado" id="expand-{{pub.id}}">
                       <div class="nombre_image">
                     <ul>
-                      <li><i class="first">{{item.user__first_name}} {{item.user__last_name}}</i></li>
-                      <li><a class="name" href="/profile/{{ item.user__username }}" >{{item.user__username}}</a></li>
+                      <li><i class="first">{{pub.author.first_name}} {{pub.author.last_name}}</i></li>
+                      <li><a class="name" href="/profile/{{ pub.author.username }}" >{{pub.user.username}}</a></li>
                     </ul>
-                          {% comment %}
-                    {% if item.user__profile__image and item.user__profile__image|file_exists %}
-                     <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
-                  {% else %}
-                     <img src="{{STATIC_URL}}img/nuevo.png"  alt="img" class="usr-img img-responsive"> <!-- id es avatar-publication-->
-                  {% endif %}
-                          {% endcomment %}
-
-                          <div class="usr-img img-responsive">{% avatar item.user__username %}</div>
+                    <div class="usr-img img-responsive">{% avatar pub.author %}</div>
                       </div>
 
                     <div class="parrafo comment-tab">
-                    <a target="_blank">{{item.from_publication__created}}</a><br><br>
-                        {{ item.from_publication__content|replace_tags_mentions|safe }}
+                    <a target="_blank">{{ pub.created }}</a><br><br>
+                        {{ pub.content|replace_tags_mentions|safe }}
                   </div>
                   <div class="text_area">
                       <textarea placeholder="Escribe tu mensaje..."></textarea>
                        <div class="botones_ampliado">
                         <button class="enviar_ampliado"><i class="fa fa-paper-plane"></i>Enviar</button>
-                        <button class="cerrar_ampliado"><i class="fa fa-close"></i><label for="check-{{item.from_publication__id}}">Cerrar</label></button>
+                        <button class="cerrar_ampliado"><i class="fa fa-close"></i><label for="check-{{pub.id}}">Cerrar</label></button>
                         <button class="difundir_ampliado"><i class="fa fa-bullhorn"></i> Difundir mensaje</button>
                         <button class="foto_ampliado"><i class="fa fa-paperclip"></i> Añadir archivo</button>
                         <button class="localizacion_ampliado"><i class="fa fa-map-marker"></i> Añadir localización</button>
@@ -49,24 +41,15 @@
                   </div>
                   </div>
       <div class="image">
-          {% comment %}
-          Eliminar si django-avatar se establece...
-        {% if item.user__profile__image and item.user__profile__image|file_exists %}
-        <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
-          {% else %}
-            <img src="{{STATIC_URL}}img/nuevo.png"  alt="img" class="usr-img img-responsive"> <!-- id es avatar-publication-->
-              {% endif %}
-          {% endcomment %}
-          <div class="usr-img img-responsive">{% avatar item.user__username %}</div>
-            </div>
+        <div class="usr-img img-responsive">{% avatar pub.author %}</div>
+      </div>
 </div>
 
                 <article class="articulo">
-                  <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{ item.user__username }}</a> ha publicado:  </h2>
-                    <p>Padre del comentario con ID: {{ item.from_publication__replies }}</p>
+                  <h2 class="h22"><a href="/profile/{{ pub.author.username }}" >{{ pub.author.username }}</a> ha comentado:  </h2>
                   <div class="parrafo comment">
-                    <a target="_blank">{{item.from_publication__created}}</a><br>
-                      <div class="wrp-comment">{{ item.from_publication__content|replace_tags_mentions|safe}}</div>
+                    <a target="_blank">{{pub.created}}</a><br>
+                      <div class="wrp-comment">{{ pub.content|replace_tags_mentions|safe}}</div>
                   </div>
                     <div class="show-more">
                         <a href="#">+ Mostrar más</a>
@@ -74,34 +57,35 @@
               <!-- OPCIONES DE COMENTARIOS -->
                 <div class="optiones_comentarios">
                     <ul class="opciones">
-                        {% if user.is_authenticated and user.username == item.user__username %} <!-- Si estamos visitando un perfil que no es el nuestro -->
+                        {% if user.is_authenticated and user.username == pub.author.username %} <!-- Si estamos visitando un perfil que no es el nuestro -->
                              <li title="Borrar comentario"><i class="fa fa-trash"></i></li>
                         {% elif user.username == user_profile.username %} <!-- Si estamos visitando nuestro propio perfil -->
                              <li title="Borrar comentario"><i class="fa fa-trash"></i></li>
                         {% endif %}
-                        {% if item.from_publication__hates > 0 %}
-                        <li title="No me gusta" class="fa-broken-heart"><i id="fa-hate" class="fa fa-heartbeat"> {{ item.from_publication__hates }}</i></li>
+                        {% if pub.hates > 0 %}
+                        <li title="No me gusta" class="fa-broken-heart"><i id="fa-hate" class="fa fa-heartbeat"> {{ pub.hates }}</i></li>
                         {% else %}
                         <li title="No me gusta" class="fa-broken-heart"><i id="fa-hate" class="fa fa-heartbeat"></i></li>
                         {% endif %}
-                        {% if item.from_publication__likes > 0 %}
-                            <li title="¡Me gusta!"><i id="like-heart" class="fa fa-heart"> {{ item.from_publication__likes }} </i></li>
+                        {% if pub.likes > 0 %}
+                            <li title="¡Me gusta!"><i id="like-heart" class="fa fa-heart"> {{ pub.likes }} </i></li>
                         {% else %}
                             <li title="¡Me gusta!"><i id="like-heart" class="fa fa-heart"></i></li>
                         {% endif %}
                        <li title="Citar"><i class="fa fa-quote-left">
                        </i></li>
-                       <li title="Responder"><i class="fa fa-reply"></i></li>
+                       <li title="Responder"><i class="fa fa-reply" id="reply-caja-comentario-{{ pub.pk }}"></i></li>
                        <li  title="Añadir a mi timeline"><i class="fa fa-tag"></i></li>
                     </ul>
                 </div>
-
                 </article>
-                <div id="actual-{{item.from_publication__id}}" class="replay-actual-message">
-                  <div class="triangle-reply"></div>
-                  <textarea name="reply-textarea" rows="4" cols="50"></textarea>
-                    <button class="enviar"><i class="fa fa-paper-plane-o"></i></button>
+                {% include "account/new_reply.html" %}
+                <!-- RESPUESTAS A COMENTARIOS -->
+                {% for reply in pub.replies %}
+                <div class="comment-reply">
+                  {{ reply }}
                 </div>
+                {% endfor %}
     </div>
     {% endfor %}
     {% elif privacity == 'OF' or privacity == 'OFAF' and isFriend == False %}
