--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -49,7 +49,7 @@
                   <h2 class="h22"><a href="/profile/{{ pub.author.username }}" >{{ pub.author.username }}</a> ha comentado:  </h2>
                   <div class="parrafo comment">
                     <a target="_blank">{{pub.created}}</a><br>
-                      <div class="wrp-comment">{{ pub.content|replace_decorators|safe}}</div>
+                      <div class="wrp-comment">{{ pub.content|replace_decorators|safe }}</div>
                   </div>
                     <div class="show-more">
                         <a href="#">+ Mostrar más</a>
@@ -83,7 +83,7 @@
                 <!-- RESPUESTAS A COMENTARIOS -->
                 {% for reply in pub.replies %}
                 <div class="comment-reply">
-                  {{ reply }}
+                  {{ reply|safe|replace_decorators|safe }}
                 </div>
                 {% endfor %}
     </div>
