--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -84,7 +84,9 @@
                 <!-- RESPUESTAS A COMENTARIOS -->
                 {% for reply in pub.replies %}
                 <div class="comment-reply">
-                  {{ reply|safe|replace_decorators|safe }}
+                <div class="avatar-reply">{% avatar reply.author %}</div>
+                    <div class="author-reply"><span class="triangle"> </span><a href="/profile/{{ reply.author }}">{{ reply.author }}</a></div>
+                      <div class="content-reply">{{ reply|safe|replace_decorators|safe }}</div>
                 </div>
                 {% endfor %}
                 </div>
