--- a/skyfolk/static/sass/configuracion.sass
+++ b/skyfolk/static/sass/configuracion.sass
@@ -334,11 +334,9 @@ hgroup
     background-color: #eee
     color: $blueskyfolk
     display: inline-block
-    -webkit-transition: all .3s ease-in
-    -moz-transition: all .3s ease-in
-    transition: all .3s ease-in
-    &:hover
-      opacity: 0.8
+    -webkit-transition: all .2s ease-in-out
+    -moz-transition: all .2s ease-in-out
+    transition: all .2s ease-in-out
     &:hover > i
       -webkit-transform: scale(1.2)
       -moz-transform: scale(1.2)
@@ -351,8 +349,8 @@ hgroup
 
   & .add-profile-image
     left: 0
-    margin-left: -62px
+    margin-left: -60px
 
   & .delete-profile-image
     right: 0
-    margin-right: -62px
+    margin-right: -60px
