--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -25,16 +25,16 @@
 				<p>Escoge esta opción para permitir a todo el mundo ver tu perfil y el contenido que publiques.</p>
 			</li>
 			<li class="col-lg-12 col-md-12 col-sm-12">
-				<h3>Sólo mis seguidores pueden ver mi perfil y mis publicaciones"</h3>
-				<p>Escoge esta opción para permitir sólo a tus seguidores ver tu perfil y tu contenido publicado.<br></p>
+				<h3>Sólo mis seguidores pueden ver mi perfil y mis publicaciones</h3><br>
+				<p>Escoge esta opción para permitir sólo a tus seguidores ver tu perfil y el contenido que publiques.<br></p>
 			</li>
 			<li class="col-lg-12 col-md-12 col-sm-12">
-				<h3>Sólo mis seguidores y aquellas personas que sigo pueden ver mi perfil y mis publicaciones</h3>
-				<p>Escoge esta opción para permitir sólo a tus seguidores y a las personas a las que sigues ver tu perfil y contenido..</p>
+				<h3>Sólo mis seguidores y aquellas personas que sigo pueden ver mi perfil y mis publicaciones</h3><br>
+				<p>Escoge esta opción para permitir sólo a tus seguidores y a las personas a las que sigues ver tu perfil y el contenido que publiques.</p>
 			</li>
 			<li class="col-lg-12 col-md-12 col-sm-121">
-				<h3>Nadie puede ver ni mi perfil ni mis publicaciones</h3>
-				<p>Ningún perfil puede ver tu perfil ni el contenido que publiques. <br><br> Esta opción es útil si quieres tener un perfil privado en el que guardar contenido útil para ti.</p>
+				<h3>Nadie puede ver ni mi perfil ni mis publicaciones</h3><br>
+				<p>Esta opción es útil si quieres tener un perfil privado en el que guardar contenido útil para ti.</p>
 			</li>
 		</ul>
 	</div>
