--- a/avatar/templates/avatar/add.html
+++ b/avatar/templates/avatar/add.html
@@ -24,7 +24,7 @@
 	{% else %}
 	{% avatar user %}
 	{% endif %}
-		<a href="{% url 'avatar_delete' %}" class="delete-profile-image"><i class="fa fa-trash"></i></a>
+		<a title="Eliminar imágenes de perfil" href="{% url 'avatar_delete' %}" class="delete-profile-image"><i class="fa fa-trash"></i></a>
 </div>
     <div id="option-avatar" class="col-lg-12 col-md-12 col-sm-12 options-avatar">
     {% if not avatars %}
