--- a/skyfolk/templates/account/base-header.html
+++ b/skyfolk/templates/account/base-header.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Base para el head de la pagina (menu horizontal con busqueda etc...)
+{% endcomment %}
 {% load notifications_tags %}
 <nav class="box-tool">
     <ul class="box-tool-wrapper">
