--- a/skyfolk/templates/account/new_reply.html
+++ b/skyfolk/templates/account/new_reply.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Nueva respuesta a una publicacion
+{% endcomment %}
 <div class="hidden" id="caja-comentario-{{ pub.pk }}" >
   <div class="triangle-reply"></div>
   <!-- REPLY FORM -->
