--- a/skyfolk/templates/account/pin-bottom.html
+++ b/skyfolk/templates/account/pin-bottom.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Pin de abajo (profile.html)
+{% endcomment %}
       <div class="video-player card">
         <div class="vbox">
             <div class="user-video">
