--- a/skyfolk/templates/account/pin-left-top.html
+++ b/skyfolk/templates/account/pin-left-top.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Pin izquierda arriba
+{% endcomment %}
 <div class="col-lg-6 col-md-12 col-sm-12">
         <div class="stock card">
             <nav class="ventana-pin">
