--- a/skyfolk/templates/account/profile-gallery.html
+++ b/skyfolk/templates/account/profile-gallery.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Galeria de imagenes de cada perfil
+{% endcomment %}
 <div style='display:none'>
       <div id='inline_content' style='padding:10px; background:#fff;'>
         <section>
