--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -1,4 +1,7 @@
 {% extends "account/base_interface.html" %}
+{% comment %}
+  Template para el perfil de cada usuario
+{% endcomment %}
 {% load app_filters %}
 {% load avatar_tags %}
 {% block title %} <title> Perfil de {{ user_profile.username }}</title> {% endblock %}
