--- a/skyfolk/templates/account/tab-comentarios.html
+++ b/skyfolk/templates/account/tab-comentarios.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Pestaña de comentarios en el perfil
+{% endcomment %}
 {% load decorators %}
 {% load avatar_tags %}
 {% load app_filters %}
