--- a/skyfolk/templates/account/tab-timeline.html
+++ b/skyfolk/templates/account/tab-timeline.html
@@ -1,6 +1,8 @@
+{% comment %}
+  Pestaña de timeline en el perfil
+{% endcomment %}
 {% load decorators %}
 {% load avatar_tags %}
-
 <div id="tab-timeline">
     <div id="section">
         <div class="wrapperx">
