--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -1,4 +1,9 @@
 $blueskyfolk: #1e88e5
+$grayColor: #555
+$whiteColor: #fff
+$grayLightColor: #e0e0e0
+$transparentGrayColor: rgba(0, 0, 0, 0.4)
+$tomatoColor: tomato
 
 *
   -webkit-box-sizing: border-box
@@ -7,15 +12,15 @@ $blueskyfolk: #1e88e5
 
 
 html, body
-  color: #555 !important
+  color: $grayColor !important
   font-family: 'Open Sans', sans-serif !important
   font-size: 11.5px !important
 
 
 .account-search, .messages-search
   font-size: 3em
-  color: grey
-  border-bottom: 2px solid #e0e0e0
+  color: $grayColor
+  border-bottom: 2px solid $grayLightColor
   padding: 10px
   display: block
 
@@ -25,11 +30,11 @@ html, body
   margin-bottom: 20px
 
 .container .personal-card
-  background-color: #fff
+  background-color: $whiteColor
   width: 100%
   margin-top: 20px
   height: 300px
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4)
+  box-shadow: 0 1px 5px $transparentGrayColor
 
 
 .container .header
@@ -54,7 +59,7 @@ html, body
   width: 80px
   height: 80px
   border-radius: 3px
-  box-shadow: 0 1px 5px #1976d2
+  box-shadow: 0 1px 5px $blueskyfolk
   cursor: pointer
   -webkit-transition: all .3s ease-in
   -moz-transition: all .3s ease-in
@@ -77,7 +82,7 @@ html, body
   float: right
   margin-right: 20px
   background-color: $blueskyfolk
-  color: #fff
+  color: $whiteColor
   border-radius: 100%
   width: 50px
   margin-left: 300px
@@ -95,18 +100,18 @@ html, body
   text-align: center
   border-radius: 7px
   padding: 10px
-  color: grey
-  background-color: #e0e0e0
+  color: $grayColor
+  background-color: $grayLightColor
 
 .container .personal-card .name-friend a:first-child
   color: $blueskyfolk
   text-decoration: none
 
 .container .personal-card .name-friend p:last-child
-  color: #414141
+  color: $grayColor
 
 .pub-search
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4)
+  box-shadow: 0 1px 5px $transparentGrayColor
   margin-top: 20px
   border-radius: 3px
   overflow: hidden
@@ -124,7 +129,7 @@ html, body
 
   & i
     font-size: 1.4em
-    color: grey
+    color: $grayColor
 
   & .pub-author
     padding-top: 10px
@@ -139,7 +144,7 @@ html, body
     margin: auto
     display: block
     border-radius: 3px
-    box-shadow: 0 1px 5px #1976d2
+    box-shadow: 0 1px 5px $blueskyfolk
     cursor: pointer
     -webkit-transition: all .3s ease-in
     -moz-transition: all .3s ease-in
@@ -154,9 +159,9 @@ html, body
 .comm
   font-size: 1.25em
   font-family: 'Open Sans', sans-serif
-  color: #616161
+  color: $grayColor
   padding: 7px
-  border-left: 3px solid tomato
+  border-left: 3px solid $tomatoColor
   overflow: hidden
   height: auto
 
@@ -170,7 +175,7 @@ html, body
 
 /* No items - Search */
 
-#search-noelements
+.noelements-search
   position: relative
   display: block
   margin: auto
@@ -178,10 +183,10 @@ html, body
 
   & .not-query
     font-size: 0.8em
-    color: #414141
+    color: $grayColor
     font-family: 'Open Sans', sans-serif
 
   & h5
-    color: #555
+    color: $grayColor
     font-family: 'Open Sans', sans-serif
     font-size: 2em
