--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -1,9 +1,11 @@
+{% comment %}
+  Template base para el login/registro
+{% endcomment %}
 <!DOCTYPE html>
 <html lang="es">
     <head>
         <!-- Hojas de estilo SASS -->
-
-	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" author="Skyfolk"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <title>¡Bienvenido a Skyfolk! - Iniciar sesión (pre)</title>
@@ -15,23 +17,19 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="{{STATIC_URL}}js/materialize.min.js"></script>
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-
 	{% block extra_head %}
 	{% endblock %}
     </head>
     <body>
-
     <div class="namesn">
         <div onclick="javascript:location.href='/'" class="logo">
                 <h5><i>S</i>kyfolk.</h5>
-                     <img src="{{STATIC_URL}}img/logo.png">
+                <img src="{{STATIC_URL}}img/logo.png">
         </div>
     </div>
-
  <div id="background_cycler" > <!-- Random backgrounds -->
       <img class="active" src="{{STATIC_URL}}img/backgrounds/back.jpg" alt=""/>
   </div>
-
        {% block content %}{% endblock %}
     <div class="footer_base">
       <div class="col s3 m3 l10 footer-copyright">
@@ -47,7 +45,5 @@
             </div>
           </div>
     </div>
-
 </body>
-
 </html>
