--- a/skyfolk/templates/account/base_search.html
+++ b/skyfolk/templates/account/base_search.html
@@ -1,4 +1,7 @@
 {% extends 'account/base_interface.html' %}
+{% comment %}
+  Base para el template de busqueda
+{% endcomment %}
 {% load app_filters %}
 {% block title %} <title>Buscar contactos</title> {% endblock %}
 {% block extra-css %}
