--- a/skyfolk/templates/account/cf-privacity.html
+++ b/skyfolk/templates/account/cf-privacity.html
@@ -1,18 +1,18 @@
 {% extends "account/base_cf.html" %}
-{% block additional_files %} 
+{% comment %}
+	Template para cambiar la privacidad
+{% endcomment %}
+{% block additional_files %}
 {% endblock %}
-
 {% block extra-css %}
 <link rel="stylesheet" href="{{STATIC_URL}}css/privacidad.css">
 {% endblock %}
-
 {% block cf-title %}
 <hgroup>
 	<h4 class="cn"> Privacidad </h4>
 	<h6 class="ch"> Cambia la privacidad de tu perfil </h6>
 </hgroup>
 {% endblock %}
-
 {% block cf-form %}
 <form id='formulario' method='post' enctype='multipart/form-data' action''>{% csrf_token %}
 	{{ privacity_form }}
