--- a/skyfolk/templates/account/followers.html
+++ b/skyfolk/templates/account/followers.html
@@ -1,15 +1,15 @@
 {% extends 'account/base_interface.html' %}
+{% comment %}
+  Template para los seguidores de un perfil
+{% endcomment %}
 {% load app_filters %}
 {% load avatar_tags %}
 {% block title %} <title>Seguidores {{ request.user.username }}</title> {% endblock %}
-
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}css/amigos.css"/>
     <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
 {% endblock %}
-
 {% block content %}
-
 <div class="container">
 <div class="col-lg-12 col-md-10 col-sm-12">
 {% for item in friends_top4 %}
@@ -40,7 +40,6 @@
 {% endfor %}
     </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
 <!--
 <center><img id="loader-ajax" src="{{STATIC_URL}}img/loading.gif"></center>
 
@@ -48,7 +47,6 @@
 -->
 </div>
 {% endblock %}
-
 {% block extra-js %}
     <script src="{{STATIC_URL}}js/friends.js"></script>
 {% endblock %}
