--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -1,36 +1,27 @@
 {% extends "account/base_login-signup.html" %}
-
+{% comment %}
+  Template para el login de un usuario
+{% endcomment %}
 {% load i18n %}
 {% load account %}
 {% load url from future %}
-
 <!--{% block head_title %}{% trans "Sign In" %}{% endblock %}-->
-
 {% block extra_head %}
 <!--<link rel="stylesheet" type="text/css" href=".../static/css/login-signup.css" />-->
 {% endblock %}
-
 {% block content %}
-
 <!-- <h1>{% trans "Sign In" %}</h1> -->
-
 {% if socialaccount.providers  %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
 of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
 for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
-
 <div class="socialaccount_ballot">
-
   <ul class="socialaccount_providers">
     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </ul>
-
   <div class="login-or">{% trans 'or' %}</div>
-
 </div>
-
 {% include "socialaccount/snippets/login_extra.html" %}
-
 {% else %}
 <!--
 <p>{% blocktrans %}If you have not created an account yet, then please
