--- a/skyfolk/templates/account/menu-horizontal.html
+++ b/skyfolk/templates/account/menu-horizontal.html
@@ -1,5 +1,9 @@
-      <li><ul class="fa fa-bars fa-lg">
-            {% if user.profile.hiddenMenu == False %} <!-- Elección del usuario el menu a mostrar -->
+{% comment %}
+  Template para el menu horizontal del perfil
+{% endcomment %}
+<li>
+  <ul class="fa fa-bars fa-lg">
+    {% if user.profile.hiddenMenu == False %} <!-- Elección del usuario el menu a mostrar -->
         <li class="fa-bars-content">
           <ul>
               <li class="fa fa-paper-plane fa-2x" id="publish2"> </li>
@@ -18,8 +22,8 @@
           </ul>
         </li>
         {% endif %}
-      </ul></li>
-
+      </ul>
+</li>
 {% if user.profile.hiddenMenu == True %}
       <li><ul class="oldMenu">
         <li onclick="location.href='/'"><i class="fa fa-home" ></i> Inicio</li>
