--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -1,3 +1,6 @@
+{% comment %}
+  Menu de notificaciones verticales 
+{% endcomment %}
 {% load notifications_tags %}
 <script src="{{STATIC_URL}}js/notify.js" type="text/javascript"></script>
 {% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' menu_id='list-notify' %}
