+ Arreglando ShowMore/ShowLess (profile.js)

--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -24,7 +24,7 @@ a, a:visited {
 .comment {
   overflow: hidden;
   line-height: 1em;
-  height: 3em; }
+  height: auto; }
 
 .comment-tab {
   height: auto; }
